# example-pyproj

./: LICENSE.txt  README.md  pyproject.toml
example_pyproject.egg-info/: PKG-INFO  SOURCES.txt
