[project]
name = "example-pyproject"
version = "0.0.1"
description = "python packaging tutorial"
license = "MIT"
license-files = "LICENSE.txt"
authors = [
  {
    name = "Alexandre Georges", email = "aes.georges@gmail.com"
  }
]
maintainers = []
# What Python versions are supported
requires-python = ">3.10"
dependencies = []
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]
